pc/rh - add code to get key for UCSB Developer API